kubernetes/test/app-test-ingress-flask.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-test-ingress-flask
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "wave-test.coe332.tacc.cloud"
      http: 
        paths: 
          - pathType: Prefix
            path: "/"
            backend: 
              service: 
                name: app-test-service-flask
                port: 
                  number: 5000
...
