kubernetes/test/app-test-service-flask.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-test-service-flask
spec:
  type: ClusterIP
  selector:
    app: wave-data-analysis
  ports:
    - name: flask-api-cluster
      port: 5000
      targetPort: 5000
...
